get application endpoint
