# docs/api/api.yaml
@@ -85,28 +85,28 @@ paths:
       tags:
         - Security
 
-#  /v1/applications/{id}:
-#    get:
-#      operationId: "get-application"
-#      description: |
-#        Find an application
-#      parameters:
-#        - in: path
-#          name: id
-#          description: ID of the application
-#          required: true
-#          schema:
-#            type: integer
-#            format: int64
-#      responses:
-#        200:
-#          description: Success
-#          content:
-#            application/json:
-#              schema:
-#                $ref: '#/components/schemas/GetApplicationResponse'
-#      tags:
-#        - Security
+  /v1/applications/{id}:
+    get:
+      operationId: "get-application"
+      description: |
+        Find an application
+      parameters:
+        - in: path
+          name: id
+          description: ID of the application
+          required: true
+          schema:
+            type: integer
+            format: int64
+      responses:
+        200:
+          description: Success
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/GetApplicationResponse'
+      tags:
+        - Security
 
 components:
   schemas:
@@ -173,7 +173,8 @@ components:
           description: Name of the application
         title:
           type: string
-          description: Human friendly title of the application
+          description: Human friendly title of the application (30 character or less)
+          maxLength: 30
         description:
           type: string
           description: Description of the application
@@ -181,10 +182,6 @@ components:
         securityLevel:
           type: integer
           description: Security Level of the application
-        iconUrl:
-          type: string
-          description: URL of the application icon
-          nullable: true
         configUrl:
           type: string
           description: URL of the application configuration panel
@@ -213,33 +210,54 @@ components:
           format: uuid
           description: API-Key of the application created
 
-#    GetApplicationResponse:
-#      type: object
-#      properties:
-#        application:
-#          $ref: "#/components/schemas/Application"
-#
-#    Application:
-#      type: object
-#      properties:
-#        id:
-#          type: integer
-#          format: int64
-#          description: ID of the application
-#        name:
-#          type: string
-#          description: Name of the application
-#        description:
-#          type: string
-#          description: Description of the application
-#          nullable: true
-#        securityLevel:
-#          type: integer
-#          description: Security Level of the application
-#        active:
-#          type: boolean
-#          description: Is the application active or not?
-#        scopes:
-#          type: array
-#          items:
-#            $ref: "#/components/schemas/Scope"
+    GetApplicationResponse:
+      type: object
+      properties:
+        application:
+          type: object
+          $ref: "#/components/schemas/Application"
+
+    Application:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+          description: ID of the application
+        name:
+          type: string
+          description: Name of the application
+        title:
+          type: string
+          description: Human friendly title of the application (30 character or less)
+          maxLength: 30
+        description:
+          type: string
+          description: Description of the application
+          nullable: true
+        securityLevel:
+          type: integer
+          description: Security Level of the application
+        configUrl:
+          type: string
+          description: URL of the application configuration panel
+          nullable: true
+        homeUrl:
+          type: string
+          description: URL of the application home page
+          nullable: true
+        active:
+          type: boolean
+          description: Is the application active or not?
+        created:
+          type: string
+          format: date-time
+          description: Application creation date
+        updated:
+          type: string
+          format: date-time
+          description: Application modification date
+        scopes:
+          type: array
+          items:
+            $ref: "#/components/schemas/Scope"
