# src/main/kotlin/com/wutsi/platform/security/dto/GetApplicationResponse.kt
@@ -1,0 +1,5 @@
+package com.wutsi.platform.security.dto
+
+public data class GetApplicationResponse(
+    public val application: Application = Application()
+)
